# grow-ai

./: .gitignore  INSTALLATION.md  PROJECT_SUMMARY.md  README.md  grow_ai.db  pyproject.toml  requirements-dev.txt
api/: deps.py  main.py  schemas.py
api/routers/: growth.py  insights.py  system.py
docs/superpowers/plans/: 2026-04-14-capture-pipeline.md
docs/superpowers/specs/: 2026-04-14-personal-ai-model-design.md
grow_ai/: __init__.py  capture.py  compress.py  compressor.py  config.py  daily_routine.py  db.py  dedup.py  deduplicator.py  embed.py  embedder.py  expand.py  finetune.py  scorer.py  scrubber.py  search.py  storage.py
grow_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hooks/: capture_conversation.py  session_capture.py
scripts/: __init__.py  install_hook.py
static/: index.html
tests/: conftest.py  test_api.py  test_capture.py  test_compress.py  test_config.py  test_db.py  test_dedup.py  test_e2e_smoke.py  test_embed.py  test_expand.py  test_finetune.py  test_imports.py  test_install_hook.py  test_scorer.py  test_scrubber.py
