[project]
name = "grow-ai"
version = "0.1.0"
description = "Personal AI that grows from your Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
grow-ai-capture = "grow_ai.capture:main"
grow-ai-install = "scripts.install_hook:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
